fixing the footer logo being too high

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -6,7 +6,7 @@
 }
 
 .tall {
-    height: 700px;
+    height: 800px;
 }
 
 .boy_title {
